force-app/main/UtilityComponents/dynamicSurveyCreator/objects/Answer_Option__c/fields/Option_Text__c.field-meta.xml
<CustomField>
    <fullName>Option_Text__c</fullName>
    <label>Option Text</label>
    <type>Text</type>
    <length>255</length> <!-- Adjust length as needed -->
    <required>true</required>
</CustomField> 