force-app/main/UtilityComponents/dynamicSurveyCreator/objects/Answer_Option__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <type>MasterDetail</type>
    <relationshipLabel>Answer Options</relationshipLabel>
    <relationshipName>Answer_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <referenceTo>Question__c</referenceTo>
</CustomField> 